# esp32-c6Touch

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  update_and_flash.ps1
main/: CMakeLists.txt  Kconfig.projbuild  accel_qmi8658.c  accel_qmi8658.h  display_st7789_lvgl.c  display_st7789_lvgl.h  iawichu_clock_ble.c  imu_qmi8658.c  imu_qmi8658.h  main.c  ui_clock.c  ui_clock.h
tools/: flash_monitor.ps1  update_and_flash.ps1
